# scout_xarm_description

./: .gitignore  CMakeLists.txt  README.md  costmap_common_docker.yaml  costmap_local_docker.yaml  package.xml  teb_local_planner_docker.yaml
launch/: scout_with_xarm_empty_world.launch  spawn_scout_with_box.launch
scout_xarm_navigation/config/: costmap_common_docker.yaml  costmap_global_docker.yaml  costmap_local_docker.yaml  teb_local_planner_docker.yaml
scout_xarm_navigation/launch/: move_base.launch  nav_explore.launch  navigation_exploration_docker.launch  slam_gmapping.launch
scripts/: gripper_init_position.py  xarm6_init_home.py  xarm6_keyboard_teleop.py
urdf/: scout_with_box.xacro
urdf/base/: scout_xarm_base.xacro
urdf/camera/: realsense_d435i.urdf.xacro
urdf/gripper/: xarm_gripper.xacro  xarm_gripper_model.xacro
urdf/scout/: scout_v2.gazebo  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
urdf/xarm6/: xarm6.urdf.xacro  xarm6_robot.urdf.xacro  xarm6_robot_macro.xacro  xarm6_with_gripper.xacro  xarm6_with_vacuum_gripper.xacro
worlds/: silvanus_block_arena.world  silvanus_training_ground.world
